--- a/GettingStartedLib/App.config
+++ b/GettingStartedLib/App.config
@@ -11,15 +11,15 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="GettingStartedLib.Service1">
+      <service name="GettingStartedLib.CalculatorService">
         <host>
           <baseAddresses>
-            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/GettingStartedLib/Service1/" />
+            <add baseAddress = "http://localhost:8000/GettingStarted/CalculatorService" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
         <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="GettingStartedLib.IService1">
+        <endpoint address="" binding="wsHttpBinding" contract="GettingStartedLib.ICalculator">
           <!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
               identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
